@@ -53,6 +53,23 @@
 </tr>
 </table>
 <p>
+2004-02-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> wand/magick_wand.c: Synchronized with latest ImageMagick API
+        changes.
+
+</UL>
+<p>
+2004-02-16  Lars Ruben Skyum  &lt;lars.skyum@stibo.com&gt;
+
+<UL>
+  <LI> magick/resize.c (HorizontalFilter): Fixed: do process K channel
+        for CMYK images.<BR>
+        (VerticalFilter): do process K channel for CMYK images.
+
+</UL>
+<p>
 2004-02-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
