@@ -1,3 +1,8 @@
+2004-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* wand/magick_wand.c: Synchronized with latest ImageMagick API
+	changes.
+
 2004-02-16  Lars Ruben Skyum  <lars.skyum@stibo.com>
 
 	* magick/resize.c (HorizontalFilter): Fixed: do process K channel
